session working ok
